--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,7 +15,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: Azure Pipelines Action
-          uses: Azure/pipelines@v1
+          uses: actions/checkout@v1
           with:
             azure-devops-project-url: https://dev.azure.com/giddi-shravyagiddi-shravya/Demo
             azure-pipeline-name: 'Demo-Maven-CI'
